# pms1

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
tests/: test_lease_utils.py
uae_property_management/: hooks.py  version.py
uae_property_management/property_management/dashboard_chart/bounced_cheques_count/: bounced_cheques_count.json
uae_property_management/property_management/dashboard_chart/monthly_rental_income/: monthly_rental_income.json
uae_property_management/property_management/dashboard_chart/property_occupancy/: property_occupancy.json
uae_property_management/property_management/doctype/lease_contract/: lease_contract.js  lease_contract.json  lease_contract.py
uae_property_management/property_management/doctype/maintenance_request/: maintenance_request.json  maintenance_request.py
uae_property_management/property_management/doctype/post_dated_cheque/: post_dated_cheque.js  post_dated_cheque.json  post_dated_cheque.py
uae_property_management/property_management/doctype/property/: property.json  property.py
uae_property_management/property_management/doctype/tenant/: tenant.json  tenant.py
uae_property_management/property_management/doctype/unit/: unit.json  unit.py
uae_property_management/property_management/report/active_leases/: active_leases.json  active_leases.py
uae_property_management/property_management/report/expiring_leases/: expiring_leases.json  (+1 more)
uae_property_management/property_management/utils/: lease_utils.py  notifications.py
(+10 files in other folders)
