[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uae_property_management"
version = "0.1.0"
description = "Leasing-focused property management for UAE"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [ { name = "amiqagroup", email = "info@amiqagroup.com" } ]
dependencies = [
    "frappe>=15.0.0,<17.0.0",
    "erpnext>=15.0.0,<17.0.0",
]
